GNOME Bugzilla – Bug 670599
color-plugin-WARNING **: failed to enumerate directory ~/.color/icc:
Last modified: 2012-06-20 08:01:26 UTC
Actual errors logged on Precise i386 (gnome-classic without effects): color-plugin-WARNING **: failed to get edid: unable to get EDID for output libcolord-CRITICAL **: cd_device_get_id: assertion `CD_IS_DEVICE (device)' failed color-plugin-WARNING **: not found device (null): Failed to FindDeviceByProperty: GDBus.Error:org.freedesktop.ColorManager.Failed: property match 'XRANDR_name'='default' does not exist libcolord-CRITICAL **: cd_device_get_id: assertion `CD_IS_DEVICE (device)' failed color-plugin-WARNING **: not found device (null): Failed to FindDeviceByProperty: GDBus.Error:org.freedesktop.ColorManager.Failed: property match 'XRANDR_name'='default' does not exist Note: gnome-color-manager is not installed Initialy reported on Launchpad: https://bugs.launchpad.net/ubuntu/+source/gnome-settings-daemon/+bug/835277
Okay, the critical warnings are fixed by: commit d675b2f9330f70ab94a1e5dabefb9e551101f6b1 Author: Richard Hughes <richard@hughsie.com> Date: Wed Feb 22 12:25:25 2012 +0000 color: Fix up a critical warning Do not try to access a device ID when the device does not exist. Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=670599 But the XRANDR_name'='default' looks very fishy. What video driver are you using?
Closing this bug report as no further information has been provided. Please feel free to reopen this bug if you can provide the information asked for. Thanks!
Sorry for the delay video card is a nvidia 8500gt with driver 295.20 on ubuntu Precise i386, logged as gnome-classic actual errors logged into xsession-errors ( first thing logged) on a fully updated system: (gnome-settings-daemon:2890): color-plugin-WARNING **: failed to get edid: unable to get EDID for output (gnome-settings-daemon:2890): color-plugin-WARNING **: unable to get EDID for xrandr-default: unable to get EDID for output (gnome-settings-daemon:2890): color-plugin-WARNING **: failed to reset xrandr-default gamma tables: gamma size is zero (gnome-settings-daemon:2890): color-plugin-WARNING **: unable to get EDID for xrandr-default: unable to get EDID for output (gnome-settings-daemon:2890): color-plugin-WARNING **: failed to reset xrandr-default gamma tables: gamma size is zero (gnome-settings-daemon:2890): color-plugin-WARNING **: unable to get EDID for xrandr-default: unable to get EDID for output (gnome-settings-daemon:2890): color-plugin-WARNING **: failed to reset xrandr-default gamma tables: gamma size is zero
Feedback, on ubuntu Precise i386 b2 with : nvidia-current 295.33 + gnome-settings-daemon 3.4.0-0ubuntu6 (gnome-settings-daemon:2867): color-plugin-WARNING **: failed to get edid: unable to get EDID for output (gnome-settings-daemon:2867): color-plugin-WARNING **: unable to get EDID for xrandr-default: unable to get EDID for output (gnome-settings-daemon:2867): color-plugin-WARNING **: failed to reset xrandr-default gamma tables: gamma size is zero oem@oem-desktop:~$ xrandr --current xrandr: Failed to get size of gamma for output default Screen 0: minimum 320 x 240, current 1680 x 1050, maximum 1680 x 1050 default connected 1680x1050+0+0 0mm x 0mm oem@oem-desktop:~$ xrandr --verbose xrandr: Failed to get size of gamma for output default Screen 0: minimum 320 x 240, current 1680 x 1050, maximum 1680 x 1050 default connected 1680x1050+0+0 (0x163) normal (normal) 0mm x 0mm Identifier: 0x160 Timestamp: 76077 Subpixel: unknown Clones: CRTC: 0 CRTCs: 0 Transform: 1.000000 0.000000 0.000000 0.000000 1.000000 0.000000 0.000000 0.000000 1.000000 filter: 1680x1050 (0x161) 88.2MHz h: width 1680 start 0 end 0 total 1680 skew 0 clock 52.5KHz v: height 1050 start 0 end 0 total 1050 clock 50.0Hz 1680x1050 (0x162) 90.0MHz h: width 1680 start 0 end 0 total 1680 skew 0 clock 53.5KHz v: height 1050 start 0 end 0 total 1050 clock 51.0Hz 1680x1050 (0x163) 91.7MHz *current h: width 1680 start 0 end 0 total 1680 skew 0 clock 54.6KHz v: height 1050 start 0 end 0 total 1050 clock 52.0Hz
gnome-color-manager 3.4.0-1 Ubuntu 12.04 LTS Linux desktop 3.4.0-030400rc6-generic #201205061835 SMP Sun May 6 22:36:08 UTC 2012 x86_64 x86_64 x86_64 GNU/Linux (gnome-settings-daemon:3292): color-plugin-WARNING **: failed to get edid: unable to get EDID for output (gnome-settings-daemon:3292): color-plugin-WARNING **: unable to get EDID for xrandr-DVI-I-2: unable to get EDID for output (gnome-settings-daemon:3292): color-plugin-WARNING **: unable to get EDID for xrandr-DVI-I-2: unable to get EDID for output xrandr --verbose Screen 0: minimum 8 x 8, current 1680 x 1050, maximum 8192 x 8192 DVI-I-0 disconnected (normal left inverted right x axis y axis) Identifier: 0x248 Timestamp: 24396 Subpixel: unknown Clones: CRTCs: 0 1 Transform: 1.000000 0.000000 0.000000 0.000000 1.000000 0.000000 0.000000 0.000000 1.000000 filter: DVI-I-1 disconnected (normal left inverted right x axis y axis) Identifier: 0x249 Timestamp: 24396 Subpixel: unknown Clones: CRTCs: 0 1 Transform: 1.000000 0.000000 0.000000 0.000000 1.000000 0.000000 0.000000 0.000000 1.000000 filter: TV-0 disconnected (normal left inverted right x axis y axis) Identifier: 0x24a Timestamp: 24396 Subpixel: unknown Clones: CRTCs: 0 1 Transform: 1.000000 0.000000 0.000000 0.000000 1.000000 0.000000 0.000000 0.000000 1.000000 filter: DVI-I-2 connected 1680x1050+0+0 (0x24c) normal (normal left inverted right x axis y axis) 474mm x 297mm Identifier: 0x24b Timestamp: 24396 Subpixel: unknown Gamma: 1.0:1.0:1.0 Brightness: 1.0 Clones: CRTC: 0 CRTCs: 0 1 Transform: 1.000000 0.000000 0.000000 0.000000 1.000000 0.000000 0.000000 0.000000 1.000000 filter: 1680x1050 (0x24c) 146.2MHz -HSync +VSync *current +preferred h: width 1680 start 1784 end 1960 total 2240 skew 0 clock 65.3KHz v: height 1050 start 1053 end 1059 total 1078 clock 60.6Hz 1600x1200 (0x24d) 162.0MHz +HSync +VSync h: width 1600 start 1664 end 1856 total 2160 skew 0 clock 75.0KHz v: height 1200 start 1201 end 1204 total 1250 clock 60.0Hz 1400x1050 (0x24e) 156.0MHz -HSync +VSync h: width 1400 start 1504 end 1648 total 1896 skew 0 clock 82.3KHz v: height 1050 start 1053 end 1057 total 1099 clock 74.9Hz 1400x1050 (0x24f) 121.8MHz -HSync +VSync h: width 1400 start 1488 end 1632 total 1864 skew 0 clock 65.3KHz v: height 1050 start 1053 end 1057 total 1089 clock 60.0Hz 1280x1024 (0x250) 135.0MHz +HSync +VSync h: width 1280 start 1296 end 1440 total 1688 skew 0 clock 80.0KHz v: height 1024 start 1025 end 1028 total 1066 clock 75.0Hz 1280x1024 (0x251) 108.0MHz +HSync +VSync h: width 1280 start 1328 end 1440 total 1688 skew 0 clock 64.0KHz v: height 1024 start 1025 end 1028 total 1066 clock 60.0Hz 1280x960 (0x252) 108.0MHz +HSync +VSync h: width 1280 start 1376 end 1488 total 1800 skew 0 clock 60.0KHz v: height 960 start 961 end 964 total 1000 clock 60.0Hz 1152x864 (0x253) 108.0MHz +HSync +VSync h: width 1152 start 1216 end 1344 total 1600 skew 0 clock 67.5KHz v: height 864 start 865 end 868 total 900 clock 75.0Hz 1024x768 (0x254) 78.8MHz +HSync +VSync h: width 1024 start 1040 end 1136 total 1312 skew 0 clock 60.0KHz v: height 768 start 769 end 772 total 800 clock 75.0Hz 1024x768 (0x255) 75.0MHz -HSync -VSync h: width 1024 start 1048 end 1184 total 1328 skew 0 clock 56.5KHz v: height 768 start 771 end 777 total 806 clock 70.1Hz 1024x768 (0x256) 65.0MHz -HSync -VSync h: width 1024 start 1048 end 1184 total 1344 skew 0 clock 48.4KHz v: height 768 start 771 end 777 total 806 clock 60.0Hz 800x600 (0x257) 49.5MHz +HSync +VSync h: width 800 start 816 end 896 total 1056 skew 0 clock 46.9KHz v: height 600 start 601 end 604 total 625 clock 75.0Hz 800x600 (0x258) 50.0MHz +HSync +VSync h: width 800 start 856 end 976 total 1040 skew 0 clock 48.1KHz v: height 600 start 637 end 643 total 666 clock 72.2Hz 800x600 (0x259) 40.0MHz +HSync +VSync h: width 800 start 840 end 968 total 1056 skew 0 clock 37.9KHz v: height 600 start 601 end 605 total 628 clock 60.3Hz 800x600 (0x25a) 36.0MHz +HSync +VSync h: width 800 start 824 end 896 total 1024 skew 0 clock 35.2KHz v: height 600 start 601 end 603 total 625 clock 56.2Hz 640x480 (0x25b) 31.5MHz -HSync -VSync h: width 640 start 656 end 720 total 840 skew 0 clock 37.5KHz v: height 480 start 481 end 484 total 500 clock 75.0Hz 640x480 (0x25c) 31.5MHz -HSync -VSync h: width 640 start 656 end 696 total 832 skew 0 clock 37.9KHz v: height 480 start 481 end 484 total 520 clock 72.8Hz 640x480 (0x25d) 25.2MHz -HSync -VSync h: width 640 start 656 end 752 total 800 skew 0 clock 31.5KHz v: height 480 start 490 end 492 total 525 clock 59.9Hz DVI-I-3 disconnected (normal left inverted right x axis y axis) Identifier: 0x25e Timestamp: 24396 Subpixel: unknown Clones: CRTCs: 0 1 Transform: 1.000000 0.000000 0.000000 0.000000 1.000000 0.000000 0.000000 0.000000 1.000000 filter:
Trying to work on it I get another error when trying to apply a test profile BToATestProfile.icc from http://www.colorkeeper.com/?page_id=235 I get the following error. (gnome-settings-daemon:3262): color-plugin-WARNING **: unable to get EDID for xrandr-DVI-I-2: unable to get EDID for output Window manager warning: Buggy client sent a _NET_ACTIVE_WINDOW message with a timestamp of 0 for 0x3200003 (TRC-LutTes) Window manager warning: meta_window_activate called by a pager with a 0 timestamp; the pager needs to be fixed. When I open the file ColorWorlds.jpg in The GNOME image viewer. 3.4.1 I get the following http://www.myimghost.com/images/nPKS1.jpg It appears the icc aware apps are pulling the profile but the desktop is not. Or is that how its supposed to work? I am new to the monitor profiling thing just purchased a munki color last week. Never have calibrated or applied custom profiles before... I thought that if I apply a profile that makes the screen pink it would do that to the entire desktop.
The warnings should be fixed, certainly, but the crux of the problem should be fixed with those newer NVidia drivers: http://www.nvidia.com/object/linux-display-amd64-302.17-driver.html Chris, let us know whether that fixes your problem.
That warning is fixed thank-you. I still cant get gnome-color-mananger to load a profile, or calibrate. But Oyranos and dispcalGUI seem to be working. When I get time I will look into gnome-color-manager and see why it wont work.
(In reply to comment #8) > I still cant get gnome-color-mananger to load a profile, or calibrate. But > Oyranos and dispcalGUI seem to be working. When I get time I will look into > gnome-color-manager and see why it wont work. The new NVIDIA drivers do not provide the per-head gamma ramp functionality, so you can't do per-head VCGT correction. I guess they didn't read that part of the xrandr specification.