color: Fix up a critical warning

Do not try to access a device ID when the device does not exist.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=670599